feat: Phase 28 "The Overlay" — HUD overlays, constant-string cover, small gaps
is the shortest feedback yet: nothing broken, nothing blocking. This closes the
three small design gaps and advances the standing asks — a new author tool + UI/UX, stronger
protection, and client verification of a mod.

HUD overlays (the feedback-flagged "natural next feature"):
 New AetheriumHud + AetheriumUi.addHud/removeHud, painted every frame over the running game
 by a client ClientHudRenderer on NeoForge RenderGuiEvent.Post, reusing the existing UiRuntime
 + renderer (transparent, no scrim, no input capture, one bad HUD contained). Loader-agnostic
 and provable headless via RecordingUiRenderer.

— AetheriumScreen.opaqueBackground:
 Default true keeps the world-blur + scrim; return false for a light panel that floats over
 the fully-visible world (adapter draws neither backdrop). AE-UI-BLUR still holds.

— Capabilities.ffmAvailable + argument-carrying ffmLazy:
 A probe-once, cached FFM verdict so a per-tick hot path branches with a plain if instead of
 throwing/catching an exception every call; plus a Function<A,T> memoized form.

— MachineState.clear/longKeys/stringKeys:
 Reset a machine; iterate a key snapshot while removing; longs/strings documented as
 immutable copies.

Protection — constant strings leave the pool too:
 StringEncryptionTransformer now encrypts static final String constant-field values (moved to
 a <clinit> decode; putstatic to a final field is legal only there, valid for classes and
 interfaces). harden-check on a shielded artifact now reports ZERO readable constants (was an
 advisory), byte-reproducible, inside the revert-on-failure sandbox. ShieldSelfTest proves a
 constant-field secret is gone from the bytes yet decodes at runtime.

Client check now covers a mod:
 The dev-run folds the test mod's content.index in, and launch-check-client.sh asserts its
 block registers on a real client under Xvfb (Registered Aetherium machine block-entity
 aetherium:test_mac